LJSUP-9754: RTE tooltips LJSV-1790: When edit "old" entries, created with RTE, lj-cut broken LJSV-1723: RTE randomly creates div's and p's causing unnecessary spaces and messing up the markup LJSV-1768: Creates new lj-cut after alignment of elements in created lj-cut LJSV-1770: not working correctly right align in lj-cut LJSV-1773: If lj-cut added in RTE, content for cutting erased from entry LJSV-1779: Editing an entry with an lj-cut does not work correctly in RTE LJSV-1789: and tag on update.bml removed after switching from html to rte LJSV-1792: Link wizard shows blank URL for existing link in RTE / removes link if cursor is inside link itself LJSV-1793: Created poll with using button in RTE (with using poll wizard) showed wrong and additionally contain in RTE unnecessary elements of poll in html
git-svn-id: http://code.livejournal.org/svn/livejournal/trunk@20037 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/js/ck/contents.css
+++ b/htdocs/js/ck/contents.css
@@ -24,6 +24,12 @@ ol,ul,dl
     padding-right:40px;
 }
 
+pre {
+	display:block;
+	margin: 0;
+	min-height:14px;
+}
+
 /* LJ CSS */
 .lj-template {
 	background-color: #000;
@@ -44,12 +50,11 @@ lj-raw {
 	border: #000000 1px dotted;
 }
 
-lj\:cut,
-.lj-cut {
+lj-cut {
 	display: block;
 	border: #000 1px dotted;
 	background-color: #d2d2d2;
-/*	text-align: center; */
+	min-height: 14px;
 }
 
 .lj-map P {
@@ -115,7 +120,6 @@ form.ljpoll {
 /* LJ Like buttons */
 .lj-like {
 	overflow: hidden;
-	min-height: 13px;
 	padding: 13px 20px;
 	margin-top: 20px;
 	background: #D2D2D2;
@@ -126,7 +130,7 @@ form.ljpoll {
 		margin-right: 15px;
 		background: url(/js/ck/images/lj-like-buttons.png) no-repeat;
 		vertical-align: middle;
-		text-indent: -3333px;
+		font-size: 0;
 		cursor: pointer;
 		}
 	.lj-like .fb {
